--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
-		<title>project 1</title>
+		<title>This little clicker</title>
 		<style>
 html, body, #canvas {
 	margin: 0;
